[workspace]

members = [
    "adder",
    "add-one",
    "add-two",
]


# Cargo has default settings for each of the profiles that apply when there 
# aren’t any [profile.*] sections in the project’s Cargo.toml file. By adding 
# [profile.*] sections for any profile you want to customize, you can override 
# any subset of the default settings. For example, here are the default values 
# for the opt-level setting for the dev and release profiles:

# [profile.dev]
# opt-level = 0

# [profile.release]
# opt-level = 3
